add two more test cases

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Test Suite</th></tr>
-<tr><td><a href="#t0">Demo Api Tests</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">6,208</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Demo Api Tests</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">12,004</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Demo Api Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Apitesting.testproject.TestCases</td><td><a href="#m0">createBooking</a></td><td rowspan="1">1653655174200</td><td rowspan="1">2623</td></tr><tr class="passedeven"><td><a href="#m1">getBookingId</a></td><td rowspan="1">1653655176825</td><td rowspan="1">1509</td></tr><tr class="passedeven"><td><a href="#m2">healthCheck</a></td><td rowspan="1">1653655178335</td><td rowspan="1">1424</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Demo Api Tests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">Apitesting.testproject.TestCases</td><td><a href="#m0">createBooking</a></td><td rowspan="1">1653986325126</td><td rowspan="1">4026</td></tr><tr class="passedeven"><td><a href="#m1">getBookingId</a></td><td rowspan="1">1653986329155</td><td rowspan="1">1512</td></tr><tr class="passedeven"><td><a href="#m2">healthCheck</a></td><td rowspan="1">1653986330668</td><td rowspan="1">1493</td></tr><tr class="passedeven"><td><a href="#m3">testCreateToken</a></td><td rowspan="1">1653986332162</td><td rowspan="1">1569</td></tr><tr class="passedeven"><td><a href="#m4">testgetbookingid</a></td><td rowspan="1">1653986333733</td><td rowspan="1">1606</td></tr></tbody>
 </table>
 <h2>Demo Api Tests</h2><h3 id="m0">Apitesting.testproject.TestCases#createBooking</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">Apitesting.testproject.TestCases#getBookingId</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">Apitesting.testproject.TestCases#healthCheck</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Apitesting.testproject.TestCases#testCreateToken</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Apitesting.testproject.TestCases#testgetbookingid</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
