--- a/test-output/old/Test Suite/methods-alphabetical.html
+++ b/test-output/old/Test Suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="71beb3">  <td>22/05/27 18:09:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.createBooking()[pri:0, instance:Apitesting.testproject.TestCases@45b4c3a9]">createBooking</td> 
-  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="71beb3">  <td>22/05/27 18:09:36</td>   <td>2625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.getBookingId()[pri:0, instance:Apitesting.testproject.TestCases@45b4c3a9]">getBookingId</td> 
-  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="71beb3">  <td>22/05/27 18:09:38</td>   <td>4135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.healthCheck()[pri:0, instance:Apitesting.testproject.TestCases@45b4c3a9]">healthCheck</td> 
-  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="71beb3">  <td>22/05/27 18:09:33</td>   <td>-637</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCases.setSpecification()[pri:0, instance:Apitesting.testproject.TestCases@45b4c3a9]">&gt;&gt;setSpecification</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1190820921</td>   <td></td> </tr>
+<tr bgcolor="71beb3">  <td>22/05/31 14:08:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.createBooking()[pri:0, instance:Apitesting.testproject.TestCases@291caca8]">createBooking</td> 
+  <td>main@1332210474</td>   <td></td> </tr>
+<tr bgcolor="71beb3">  <td>22/05/31 14:08:49</td>   <td>4029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.getBookingId()[pri:0, instance:Apitesting.testproject.TestCases@291caca8]">getBookingId</td> 
+  <td>main@1332210474</td>   <td></td> </tr>
+<tr bgcolor="71beb3">  <td>22/05/31 14:08:50</td>   <td>5542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.healthCheck()[pri:0, instance:Apitesting.testproject.TestCases@291caca8]">healthCheck</td> 
+  <td>main@1332210474</td>   <td></td> </tr>
+<tr bgcolor="71beb3">  <td>22/05/31 14:08:43</td>   <td>-1765</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCases.setSpecification()[pri:0, instance:Apitesting.testproject.TestCases@291caca8]">&gt;&gt;setSpecification</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1332210474</td>   <td></td> </tr>
+<tr bgcolor="71beb3">  <td>22/05/31 14:08:52</td>   <td>7036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.testCreateToken()[pri:0, instance:Apitesting.testproject.TestCases@291caca8]">testCreateToken</td> 
+  <td>main@1332210474</td>   <td></td> </tr>
+<tr bgcolor="71beb3">  <td>22/05/31 14:08:53</td>   <td>8607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.testgetbookingid()[pri:0, instance:Apitesting.testproject.TestCases@291caca8]">testgetbookingid</td> 
+  <td>main@1332210474</td>   <td></td> </tr>
 </table>
