--- a/test-output/extentreport.html
+++ b/test-output/extentreport.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2022-05-27 18:09:39</span>
+					<span class='suite-started-time'>2022-05-31 14:08:55</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 5s+802ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 11s+107ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 5s+802ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 11s+107ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2022-05-27 18:09:34</span> 
+							<span class='panel-lead suite-started-time'>2022-05-31 14:08:44</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2022-05-27 18:09:39</span> 
+							<span class='panel-lead suite-ended-time'>2022-05-31 14:08:55</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='7519bf67-1bed-4e40-b0f8-31dc72425b6c'>
+										<li class='collection-item test displayed active pass ' extentid='2b671842-315a-45f6-adb8-98ce99608e2c'>
 											<div class='test-head'>
 												<span class='test-name'>createBooking </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -245,7 +245,7 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-05-27 18:09:34</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-05-31 14:08:45</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -265,37 +265,37 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:34</td>
+																	<td class='timestamp'>14:08:45</td>
 																		<td class='step-name'>Specifying the base URI</td>
 																	<td class='step-details'>https://restful-booker.herokuapp.com/</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:34</td>
+																	<td class='timestamp'>14:08:45</td>
 																		<td class='step-name'>API Call</td>
 																	<td class='step-details'>POST</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:34</td>
+																	<td class='timestamp'>14:08:45</td>
 																		<td class='step-name'>Payload</td>
 																	<td class='step-details'>{firstname: "Shivam", lastname: "Pandoh", totalprice: 111, depositpaid: true, bookingdates: {checkin: "2022-01-01", checkout: "2022-01-10"}, additionalNeeds: "Lunch"}</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:34</td>
+																	<td class='timestamp'>14:08:45</td>
 																		<td class='step-name'>Resource url</td>
 																	<td class='step-details'>booking</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:34</td>
+																	<td class='timestamp'>14:08:45</td>
 																		<td class='step-name'>Field Comparison</td>
 																	<td class='step-details'>booking.firstname</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:09:36</td>
+																	<td class='timestamp'>14:08:49</td>
 																		<td class='step-name'>Testcase has Passed!!</td>
 																	<td class='step-details'>createBooking</td>
 																</tr>
@@ -306,7 +306,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='48393671-4af0-438d-b77f-c371c3610ce5'>
+										<li class='collection-item test displayed active pass ' extentid='e31e57d9-3dfb-40ab-81db-7758cf67e83e'>
 											<div class='test-head'>
 												<span class='test-name'>getBookingId </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -314,7 +314,7 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-05-27 18:09:36</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-05-31 14:08:49</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -334,31 +334,31 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:36</td>
+																	<td class='timestamp'>14:08:49</td>
 																		<td class='step-name'>Specifying the base URI</td>
 																	<td class='step-details'>https://restful-booker.herokuapp.com/</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:36</td>
+																	<td class='timestamp'>14:08:49</td>
 																		<td class='step-name'>API Call</td>
 																	<td class='step-details'>GET</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:36</td>
+																	<td class='timestamp'>14:08:49</td>
 																		<td class='step-name'>Resource url</td>
 																	<td class='step-details'>booking/1089</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:36</td>
+																	<td class='timestamp'>14:08:49</td>
 																		<td class='step-name'>Field Comparison</td>
 																	<td class='step-details'>firstname</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:09:38</td>
+																	<td class='timestamp'>14:08:50</td>
 																		<td class='step-name'>Testcase has Passed!!</td>
 																	<td class='step-details'>getBookingId</td>
 																</tr>
@@ -369,7 +369,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='206749a5-afe4-4c4d-ba76-c1c6cb864a33'>
+										<li class='collection-item test displayed active pass ' extentid='d9162b92-2ed8-4b17-94b5-5394bd8fe31d'>
 											<div class='test-head'>
 												<span class='test-name'>healthCheck </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -377,7 +377,7 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-05-27 18:09:38</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-05-31 14:08:50</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -397,33 +397,159 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:38</td>
+																	<td class='timestamp'>14:08:50</td>
 																		<td class='step-name'>Specifying the base URI</td>
 																	<td class='step-details'>https://restful-booker.herokuapp.com/</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:38</td>
+																	<td class='timestamp'>14:08:50</td>
 																		<td class='step-name'>API Call</td>
 																	<td class='step-details'>GET</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:38</td>
+																	<td class='timestamp'>14:08:50</td>
 																		<td class='step-name'>Resource url</td>
 																	<td class='step-details'>ping</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:09:38</td>
+																	<td class='timestamp'>14:08:50</td>
 																		<td class='step-name'>Field Comparison</td>
 																	<td class='step-details'>statusCode</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:09:39</td>
+																	<td class='timestamp'>14:08:52</td>
 																		<td class='step-name'>Testcase has Passed!!</td>
 																	<td class='step-details'>healthCheck</td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='f480f155-ba6b-4cb5-a490-1cd73454b60b'>
+											<div class='test-head'>
+												<span class='test-name'>testCreateToken </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-05-31 14:08:52</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
+												</div>
+												<div class='test-desc'>Generating auth token</div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																	<th>StepName</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>14:08:52</td>
+																		<td class='step-name'>Specifying the base URI</td>
+																	<td class='step-details'>https://restful-booker.herokuapp.com</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>14:08:52</td>
+																		<td class='step-name'>API call</td>
+																	<td class='step-details'>GET</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>14:08:52</td>
+																		<td class='step-name'>Resource route</td>
+																	<td class='step-details'>/auth</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>14:08:52</td>
+																		<td class='step-name'>Value compared</td>
+																	<td class='step-details'>StatusCode</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>14:08:53</td>
+																		<td class='step-name'>Testcase has Passed!!</td>
+																	<td class='step-details'>testCreateToken</td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='6e8c6427-dae5-4fe6-98b3-2b8ae694bc24'>
+											<div class='test-head'>
+												<span class='test-name'>testgetbookingid </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-05-31 14:08:53</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
+												</div>
+												<div class='test-desc'>Getting the list of booking ids</div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																	<th>StepName</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>14:08:53</td>
+																		<td class='step-name'>Specifying the base URI</td>
+																	<td class='step-details'>https://restful-booker.herokuapp.com</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>14:08:53</td>
+																		<td class='step-name'>API call</td>
+																	<td class='step-details'>GET</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>14:08:53</td>
+																		<td class='step-name'>Resource route</td>
+																	<td class='step-details'>/booking</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>14:08:53</td>
+																		<td class='step-name'>Value compared</td>
+																	<td class='step-details'>bookingid</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>14:08:55</td>
+																		<td class='step-name'>Testcase has Passed!!</td>
+																	<td class='step-details'>testgetbookingid</td>
 																</tr>
 														</tbody>
 													</table>
