--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -113,6 +113,16 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Test_Suite" title="Apitesting.testproject.TestCases" class="method navigator-link" hash-for-method="healthCheck">healthCheck</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Test_Suite" title="Apitesting.testproject.TestCases" class="method navigator-link" hash-for-method="testCreateToken">testCreateToken</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Test_Suite" title="Apitesting.testproject.TestCases" class="method navigator-link" hash-for-method="testgetbookingid">testgetbookingid</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Test_Suite -->
@@ -158,6 +168,24 @@
                   <span class="method-name">healthCheck</span>
                   <em>
 (Health Checkup (ping server))                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testCreateToken">
+                  </a> <!-- testCreateToken -->
+                  <span class="method-name">testCreateToken</span>
+                  <em>
+(Generating auth token)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testgetbookingid">
+                  </a> <!-- testgetbookingid -->
+                  <span class="method-name">testgetbookingid</span>
+                  <em>
+(Getting the list of booking ids)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -217,24 +245,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'createBooking')
 data.setCell(0, 2, 'Apitesting.testproject.TestCases')
-data.setCell(0, 3, 2623);
+data.setCell(0, 3, 4026);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getBookingId')
+data.setCell(1, 1, 'testgetbookingid')
 data.setCell(1, 2, 'Apitesting.testproject.TestCases')
-data.setCell(1, 3, 1509);
+data.setCell(1, 3, 1606);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'healthCheck')
+data.setCell(2, 1, 'testCreateToken')
 data.setCell(2, 2, 'Apitesting.testproject.TestCases')
-data.setCell(2, 3, 1424);
+data.setCell(2, 3, 1569);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'getBookingId')
+data.setCell(3, 2, 'Apitesting.testproject.TestCases')
+data.setCell(3, 3, 1512);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'healthCheck')
+data.setCell(4, 2, 'Apitesting.testproject.TestCases')
+data.setCell(4, 3, 1493);
 window.suiteTableData['Test_Suite']= { tableData: data, tableDiv: 'times-div-Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Test_Suite">
               </div> <!-- times-div-Test_Suite -->
             </div> <!-- times-div -->
@@ -267,15 +303,23 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">createBooking</span>
-                <span class="method-start">641 ms</span>
+                <span class="method-start">1772 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getBookingId</span>
-                <span class="method-start">3266 ms</span>
+                <span class="method-start">5801 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">healthCheck</span>
-                <span class="method-start">4776 ms</span>
+                <span class="method-start">7314 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testCreateToken</span>
+                <span class="method-start">8808 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testgetbookingid</span>
+                <span class="method-start">10379 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
